# weaviate-sample

./: .gitignore  README.md  colbert.ipynb  docker-compose.yml  download_jaqara.py  encodding_sample.ipynb  encoder.py  jqara.ipynb  main.py  muvera-memo.md  muvera.ipynb  pyproject.toml  tutorial.ipynb  weaviate-cloud.ipynb
notebook/: muvera.ipynb  single-vector.ipynb  weaviate-cloud.ipynb
