[project]
name = "weaviate-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "weaviate-client>=4.17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
